everything works except Edit method

--- a/MyBase.WEB/Views/Home/Create.cshtml
+++ b/MyBase.WEB/Views/Home/Create.cshtml
@@ -1,11 +1,11 @@
 ﻿
 @{
-    ViewBag.Title = "Add";
+    ViewBag.Title = "Create";
 }
 
 
 <h3>I want to add</h3>
-@using (Html.BeginForm("Add", "Home"))
+@using (Html.BeginForm("Create", "Home"))
 {
     <table>
         
