--- a/MyBase.WEB/Views/Home/Create.cshtml
+++ b/MyBase.WEB/Views/Home/Create.cshtml
@@ -1,30 +1,31 @@
-﻿
+﻿@model MyBase.WEB.Models.UserViewModel
+
 @{
     ViewBag.Title = "Create";
 }
 
 
-<h3>I want to add</h3>
+<h3>Введите данные</h3>
 @using (Html.BeginForm("Create", "Home"))
 {
-    <table>        
+    <table>
         <tr>
-            <td><p>First name </p></td>
+            <td>@Html.DisplayNameFor(model => model.FirstName)</td>
             <td>@Html.TextBox("FirstName") </td>
         </tr>
         <tr>
-            <td><p>Last name</p></td>
+            <td>@Html.DisplayNameFor(model => model.LastName)</td>
             <td>@Html.TextBox("LastName") </td>
         </tr>
         <tr>
-            <td><p>Phone </p></td>
+            <td>@Html.DisplayNameFor(model => model.PhoneNumber)</td>
             <td>@Html.TextBox("PhoneNumber") </td>
         </tr>
         <tr>
-            <td><p>e-mail</p></td>
+            <td>@Html.DisplayNameFor(model => model.Email)</td>
             <td>@Html.TextBox("Email") </td>
         </tr>
-        <tr><td><input type="submit" value="Done" /> </td><td></td></tr>
+        <tr><td><input type="submit" value="Готово" /> </td><td></td></tr>
     </table>
 }
 
