--- a/MyBase.WEB/Views/Home/Create.cshtml
+++ b/MyBase.WEB/Views/Home/Create.cshtml
@@ -6,7 +6,8 @@
 
 
 <h3>Введите данные</h3>
-@using (Html.BeginForm("Create", "Home"))
+<hr />
+@using (Html.BeginForm("Create", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     <table>
         <tr>
@@ -24,8 +25,11 @@
         <tr>
             <td>@Html.DisplayNameFor(model => model.Email)</td>
             <td>@Html.EditorFor(model => model.Email) </td>
-        </tr>
-        <tr><td><input type="submit" value="Готово" /> </td><td></td></tr>
+        </tr>        
     </table>
-}
+    <hr />
+    <input type="file" name="uploadImage" />
+    <hr />
+    <input type="submit" value="Добавить" />
 
+}
