--- a/MyBase.WEB/Views/Home/Delete.cshtml
+++ b/MyBase.WEB/Views/Home/Delete.cshtml
@@ -5,9 +5,9 @@
 }
 
 
-<div>
 
-    <h4>Пользователь</h4>
+    @Html.Raw("<img style='height:280px; margin: 20px' src=\"data:image/jpeg;base64,"
+        + Convert.ToBase64String(Model.Image) + "\" />")
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -43,15 +43,15 @@
         </dd>
     </dl>
 
-    
+
     @using (Html.BeginForm("Delete", "Home")) //надо остальные??
     {
-        <h3>Вы уверены?</h3>
+        <h4>Вы уверены?</h4>
         <div class="form-actions no-color">
             <input type="hidden" value="@Model.FirstName" name="FirstName" />
-            <input type="submit" value="Да" class="btn btn-default" />             
+            <input type="submit" value="Да" class="btn btn-default" />
         </div>
     }
     <hr />
     @Html.ActionLink("Все пользователи", "Index")
-</div>
+
