--- a/MyBase.WEB/Views/Home/Details.cshtml
+++ b/MyBase.WEB/Views/Home/Details.cshtml
@@ -5,8 +5,11 @@
 }
 
 <div>
-    <h4>Пользователь</h4>
+    @Html.Raw("<img style='height:280px; margin: 20px' src=\"data:image/jpeg;base64,"
+        + Convert.ToBase64String(Model.Image) + "\" />")
     <hr />
+    
+
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.FirstName)
@@ -38,7 +41,7 @@
 
         <dd>
             @Html.DisplayFor(model => model.Email)
-        </dd>        
+        </dd>
     </dl>
 </div>
 <p>
