--- a/MyBase.WEB/Views/Home/Edit.cshtml
+++ b/MyBase.WEB/Views/Home/Edit.cshtml
@@ -5,8 +5,9 @@
 }
 
 <h3>Изменить</h3>
+<hr />
 
-@using (Html.BeginForm("Edit", "Home"))
+@using (Html.BeginForm("Edit", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     <input type="hidden" value="@Model.ContactId" name="ContactId" />
     <input type="hidden" value="@Model.PictureId" name="ContactId" />
@@ -27,10 +28,11 @@
             <td>@Html.DisplayNameFor(model => model.Email)</td>
             <td>@Html.EditorFor(model => model.Email) </td>
         </tr>
-        <tr><td><input type="submit" value="Готово" /> </td><td></td></tr>
     </table>
-
     <hr />
-    @Html.ActionLink("Все пользователи", "Index")
+    <input type="file" name="uploadImage" />
+    <hr />
+    <input type="submit" value="Готово" />
+    <hr />
 
 }
