--- a/MyBase.WEB/Views/Home/Index.cshtml
+++ b/MyBase.WEB/Views/Home/Index.cshtml
@@ -5,36 +5,21 @@
 }
 
 <table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LastName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PhoneNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>        
-    </tr>
 
     @foreach (var item in Model)
     {
         <tr>
+            <td>
+                @Html.Raw("<img style='width:200px;' src=\"data:image/jpeg;base64,"
+            + Convert.ToBase64String(item.Image) + "\" />")
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FirstName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.LastName)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PhoneNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>            
+                       
             <td>
                 @Html.ActionLink("Изменить", "Edit", new { id = item.Id }) |
                 @Html.ActionLink("Открыть", "Details", new { id = item.Id }) |
