--- a/MyBase.WEB/Views/Home/Delete.cshtml
+++ b/MyBase.WEB/Views/Home/Delete.cshtml
@@ -6,8 +6,8 @@
 
 
 
-    @Html.Raw("<img style='height:280px; margin: 20px' src=\"data:image/jpeg;base64,"
-        + Convert.ToBase64String(Model.Image) + "\" />")
+    @*@Html.Raw("<img style='height:280px; margin: 20px' src=\"data:image/jpeg;base64,"
+        + Convert.ToBase64String(Model.Image) + "\" />")*@
     <hr />
     <dl class="dl-horizontal">
         <dt>
