--- a/MyBase.WEB/Views/Home/Details.cshtml
+++ b/MyBase.WEB/Views/Home/Details.cshtml
@@ -5,8 +5,8 @@
 }
 
 <div>
-    @Html.Raw("<img style='height:280px; margin: 20px' src=\"data:image/jpeg;base64,"
-        + Convert.ToBase64String(Model.Image) + "\" />")
+    @*@Html.Raw("<img style='height:280px; margin: 20px' src=\"data:image/jpeg;base64,"
+        + Convert.ToBase64String(Model.Image) + "\" />")*@
     <hr />
     
 
