--- a/MyBase.WEB/Views/Home/Create.cshtml
+++ b/MyBase.WEB/Views/Home/Create.cshtml
@@ -9,26 +9,22 @@
 <hr />
 @using (Html.BeginForm("Create", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
-    @*<div class="editor-field">
-        @Html.EditorFor(model => model.FirstName)
-        @Html.ValidationMessageFor(model => model.FirstName)
-    </div>*@
     <table>
         <tr>
             <td>@Html.DisplayNameFor(model => model.FirstName)</td>
-            <td>@Html.EditorFor(model => model.FirstName) </td>
+            <td>@Html.EditorFor(model => model.FirstName) @Html.ValidationMessageFor(model => model.FirstName)</td>
         </tr>
         <tr>
             <td>@Html.DisplayNameFor(model => model.LastName)</td>
-            <td>@Html.EditorFor(model => model.LastName) </td>
+            <td>@Html.EditorFor(model => model.LastName) @Html.ValidationMessageFor(model => model.LastName)</td>
         </tr>
         <tr>
             <td>@Html.DisplayNameFor(model => model.PhoneNumber)</td>
-            <td>@Html.EditorFor(model => model.PhoneNumber) </td>
+            <td>@Html.EditorFor(model => model.PhoneNumber) @Html.ValidationMessageFor(model => model.PhoneNumber)</td>
         </tr>
         <tr>
             <td>@Html.DisplayNameFor(model => model.Email)</td>
-            <td>@Html.EditorFor(model => model.Email)</td>
+            <td>@Html.EditorFor(model => model.Email) @Html.ValidationMessageFor(model => model.Email)</td>
         </tr>
     </table>
     <hr />
