--- a/MyBase.WEB/Views/Home/Details.cshtml
+++ b/MyBase.WEB/Views/Home/Details.cshtml
@@ -7,8 +7,13 @@
 <div>
     @*@Html.Raw("<img style='height:280px; margin: 20px' src=\"data:image/jpeg;base64,"
         + Convert.ToBase64String(Model.Image) + "\" />")*@
+    @if (Model.Image != null)
+    {
+        @Html.Raw("<img style='height:280px; margin: 20px' src=\"data:image/jpeg;base64,"
+            + Convert.ToBase64String(Model.Image) + "\" />")
+    }
     <hr />
-    
+
 
     <dl class="dl-horizontal">
         <dt>
