--- a/MyBase.WEB/Views/Home/Index.cshtml
+++ b/MyBase.WEB/Views/Home/Index.cshtml
@@ -10,8 +10,12 @@
     {
         <tr>
             <td>
-                @Html.Raw("<img style='width:200px;' src=\"data:image/jpeg;base64,"
-            + Convert.ToBase64String(item.Image) + "\" />")
+                @if (item.Image != null)
+                {
+                    @Html.Raw("<img style='width:200px;' src=\"data:image/jpeg;base64,"
+          + Convert.ToBase64String(item.Image) + "\" />")
+                }
+
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FirstName)
