--- a/MyBase.WEB/Views/Home/Index.cshtml
+++ b/MyBase.WEB/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "View";
 }
-
+@Html.ActionLink("Много", "CreateFakeData")
 <table class="table">
 
     @foreach (var item in Model)
@@ -23,7 +23,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.LastName)
             </td>
-                       
+
             <td>
                 @Html.ActionLink("Изменить", "Edit", new { id = item.Id }) |
                 @Html.ActionLink("Открыть", "Details", new { id = item.Id }) |
