--- a/MyBase.WEB/Views/Home/Index.cshtml
+++ b/MyBase.WEB/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "View";
 }
-@Html.ActionLink("Много", "CreateFakeData")
+@*@Html.ActionLink("Много", "CreateFakeData")*@
 
 <table class="table">
 
@@ -35,7 +35,6 @@
 
 </table>
 <br />
-
 @if (Model.PageInfo.TotalItems > Model.PageInfo.PageSize)
 {
     <div class="btn-group">
@@ -51,8 +50,8 @@
             <a class="btn btn-default" href="/?page=@(Model.PageInfo.TotalPages)&size=@Model.PageInfo.PageSize"> >> </a>
         }
     </div>
-    <div class="btn-group" style="position:absolute; right:100px;" >
-        <header style="margin:5px;" >Выводить по</header>
+    <div class="btn-group" style="position:absolute; right:100px;">
+        <header style="margin:5px;">Выводить по</header>
         <a class="btn btn-default" href="/?size=10"> 10 </a>
         <a class="btn btn-default" href="/?size=25"> 25 </a>
         <a class="btn btn-default" href="/?size=100"> 100 </a>
