--- a/MyBase.WEB/Views/Shared/_Layout.cshtml
+++ b/MyBase.WEB/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Добавить", "Create", "Home")</li>
+                    <li>@Html.ActionLink("Придумать много новых!", "CreateFakeData", "Home")</li>
                 </ul>
             </div>
         </div>
