async, await, mapper for list

--- a/MyBase.WEB/Views/Home/Edit.cshtml
+++ b/MyBase.WEB/Views/Home/Edit.cshtml
@@ -37,7 +37,7 @@
         </tr>
     </table>
     <hr />
-    <input type="file" name="uploadImage" />
+    <input type="file" name="File" />
     <hr />
     <input type="submit" value="Готово" />
     <hr />
