--- a/MyBase.WEB/Views/Home/Create.cshtml
+++ b/MyBase.WEB/Views/Home/Create.cshtml
@@ -28,7 +28,7 @@
         </tr>
     </table>
     <hr />
-    <input type="file" name="uploadImage" />
+    <input type="file" name="File" />
     <hr />
     <input type="submit" value="Добавить" />
 
