fix Update and Delete methods, default picture

--- a/MyBase.WEB/Views/Home/Delete.cshtml
+++ b/MyBase.WEB/Views/Home/Delete.cshtml
@@ -4,55 +4,59 @@
     ViewBag.Title = "Delete";
 }
 
-    @if (Model.Image != null)
-    {
-      @Html.Raw("<img style='height:280px; margin: 20px' src=\"data:image/jpeg;base64,"
-          + Convert.ToBase64String(Model.Image) + "\" />")
-    }
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </dt>
+@if (Model.Image != null)
+{
+    @Html.Raw("<img style='height:280px; margin: 20px' src=\"data:image/jpeg;base64,"
+        + Convert.ToBase64String(Model.Image) + "\" />")
+}
+else
+{
+    <img  style='width:200px' margin: 20px' src="/no.jpg">
+}
+<hr />
+<dl class="dl-horizontal">
+    <dt>
+        @Html.DisplayNameFor(model => model.FirstName)
+    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.FirstName)
-        </dd>
+    <dd>
+        @Html.DisplayFor(model => model.FirstName)
+    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.LastName)
-        </dt>
+    <dt>
+        @Html.DisplayNameFor(model => model.LastName)
+    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.LastName)
-        </dd>
+    <dd>
+        @Html.DisplayFor(model => model.LastName)
+    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.PhoneNumber)
-        </dt>
+    <dt>
+        @Html.DisplayNameFor(model => model.PhoneNumber)
+    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.PhoneNumber)
-        </dd>
+    <dd>
+        @Html.DisplayFor(model => model.PhoneNumber)
+    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
+    <dt>
+        @Html.DisplayNameFor(model => model.Email)
+    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-    </dl>
+    <dd>
+        @Html.DisplayFor(model => model.Email)
+    </dd>
+</dl>
 
 
-    @using (Html.BeginForm("Delete", "Home")) 
-    {
-        <h4>Вы уверены?</h4>
-        <div class="form-actions no-color">
-            <input type="hidden" value="@Model.FirstName" name="FirstName" />
-            <input type="submit" value="Да" class="btn btn-default" />
-        </div>
-    }
-    <hr />
-    @Html.ActionLink("Все пользователи", "Index")
+@using (Html.BeginForm("Delete", "Home"))
+{
+    <h4>Вы уверены?</h4>
+    <div class="form-actions no-color">
+        <input type="hidden" value="@Model.FirstName" name="FirstName" />
+        <input type="submit" value="Да" class="btn btn-default" />
+    </div>
+}
+<hr />
+@Html.ActionLink("Все пользователи", "Index")
 
