--- a/MyBase.WEB/Views/Home/Edit.cshtml
+++ b/MyBase.WEB/Views/Home/Edit.cshtml
@@ -9,6 +9,10 @@
     @Html.Raw("<img style='height:280px; margin: 20px' src=\"data:image/jpeg;base64,"
         + Convert.ToBase64String(Model.Image) + "\" />")
 }
+else
+{
+    <img style='width:200px' margin: 20px' src="/no.jpg">
+}
 
 <hr />
 
