--- a/MyBase.WEB/Views/Home/Index.cshtml
+++ b/MyBase.WEB/Views/Home/Index.cshtml
@@ -15,6 +15,10 @@
                     @Html.Raw("<img style='width:200px;' src=\"data:image/jpeg;base64,"
           + Convert.ToBase64String(item.Image) + "\" />")
                 }
+                else
+                {
+                    <img  style='width:200px; margin: 20px' src="/no.jpg">
+                }
 
             </td>
             <td>
