delete contact table

--- a/MyBase.WEB/Views/Shared/_Layout.cshtml
+++ b/MyBase.WEB/Views/Shared/_Layout.cshtml
@@ -16,12 +16,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Главная", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Главная", "Index", "User", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Добавить", "Create", "Home")</li>
-                    <li>@Html.ActionLink("Заполнить 100 000", "FillStorageWithUsers", "Home")</li>
+                    <li>@Html.ActionLink("Добавить", "Create", "User")</li>
+                    <li>@Html.ActionLink("Заполнить 100 000", "FillStorageWithUsers", "User")</li>
                 </ul>
             </div>
         </div>
