--- a/MyBase.WEB/Views/User/Delete.cshtml
+++ b/MyBase.WEB/Views/User/Delete.cshtml
@@ -49,7 +49,7 @@ else
 </dl>
 
 
-@using (Html.BeginForm("Delete", "Home"))
+@using (Html.BeginForm("Delete", "User"))
 {
     <h4>Вы уверены?</h4>
     <div class="form-actions no-color">
