--- a/MyBase.WEB/Views/User/Edit.cshtml
+++ b/MyBase.WEB/Views/User/Edit.cshtml
@@ -1,15 +1,27 @@
 ﻿@model MyBase.WEB.Models.UserViewModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
 }
 
+@if (Model.Image != null)
+{
+    @Html.Raw("<img style='height:280px; margin: 20px' src=\"data:image/jpeg;base64,"
+        + Convert.ToBase64String(Model.Image) + "\" />")
+}
+else
+{
+    <img style='width:200px' margin: 20px' src="/no.jpg">
+}
 
-<h3>Введите данные</h3>
 <hr />
-@using (Html.BeginForm("Create", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
+
+@using (Html.BeginForm("Edit", "User", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     <table>
+        <tr>
+            <td>@Html.HiddenFor(model => model.PictureId) </td>
+        </tr>
         <tr>
             <td>@Html.DisplayNameFor(model => model.FirstName)</td>
             <td>@Html.EditorFor(model => model.FirstName) @Html.ValidationMessageFor(model => model.FirstName)</td>
@@ -30,6 +42,6 @@
     <hr />
     <input type="file" name="File" />
     <hr />
-    <input type="submit" value="Добавить" />
-
+    <input type="submit" value="Готово" />
+    <hr />
 }
