--- a/MyBase.WEB/Views/User/Details.cshtml
+++ b/MyBase.WEB/Views/User/Details.cshtml
@@ -1,9 +1,13 @@
 ﻿@model MyBase.WEB.Models.UserViewModel
-
 @{
     ViewBag.Title = "Details";
 }
-
+@if (TempData["Message"] != null)
+{
+    <div>
+        @TempData["Message"].ToString()
+    </div>
+}
 <div>
     @if (Model.Image != null)
     {
@@ -15,36 +19,28 @@
         <img style='width:200px' margin: 20px' src="/no.jpg">
     }
     <hr />
-
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.FirstName)
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.FirstName)
         </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.LastName)
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.LastName)
         </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.PhoneNumber)
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.PhoneNumber)
         </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Email)
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.Email)
         </dd>
