--- a/MyBase.WEB/Views/User/Index.cshtml
+++ b/MyBase.WEB/Views/User/Index.cshtml
@@ -3,9 +3,14 @@
 @{
     ViewBag.Title = "View";
 }
-
+@*@if (TempData.ContainsKey("Message"))*@
+@if (TempData["Message"] != null)
+{
+    <div>
+        @TempData["Message"].ToString()
+    </div>
+}
 <table class="table">
-
     @foreach (var item in Model.Users)
     {
         <tr>
@@ -17,9 +22,8 @@
                 }
                 else
                 {
-                    <img  style='width:200px; margin: 20px' src="/no.jpg">
+                    <img style='width:200px; margin: 20px' src="/no.jpg">
                 }
-
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FirstName)
@@ -27,7 +31,6 @@
             <td>
                 @Html.DisplayFor(modelItem => item.LastName)
             </td>
-
             <td>
                 @Html.ActionLink("Изменить", "Edit", new { id = item.Id }) |
                 @Html.ActionLink("Открыть", "Details", new { id = item.Id }) |
@@ -35,7 +38,6 @@
             </td>
         </tr>
     }
-
 </table>
 <br />
 @if (Model.PageInfo.TotalItems > Model.PageInfo.PageSize)
@@ -60,7 +62,5 @@
         <a class="btn btn-default" href="/?size=100"> 100 </a>
     </div>
 }
-
-
 
 
