--- a/MyBase.WEB/Views/User/Index.cshtml
+++ b/MyBase.WEB/Views/User/Index.cshtml
@@ -16,24 +16,22 @@
             <td>
                 @if (item.Image != null)
                 {
-                    @Html.Raw("<img style='width:200px;' src=\"data:image/jpeg;base64,"
+                    @Html.Raw("<img style='max-width:200px; max-height: 200px' src=\"data:image/jpeg;base64,"
           + Convert.ToBase64String(item.Image) + "\" />")
                 }
                 else
                 {
-                    <img style='width:200px; margin: 20px' src="/no.jpg">
+                    <img style='max-width:200px; max-height: 200px; ' src="/no.jpg">
                 }
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
+                @Html.DisplayFor(modelItem => item.FirstName) <br>
                 @Html.DisplayFor(modelItem => item.LastName)
             </td>
             <td>
-                @Html.ActionLink("Изменить", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Открыть", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Удалить", "Delete", new { id = item.Id })
+                @Html.ActionLink("Изменить", "Edit", new { id = item.Id }, new { @class = "btn btn-default" }) <br>
+                @Html.ActionLink("Открыть", "Details", new { id = item.Id }, new { @class = "btn btn-default" }) <br>
+                @Html.ActionLink("Удалить", "Delete", new { id = item.Id }, new { @class = "btn btn-default" })
             </td>
         </tr>
     }
@@ -41,25 +39,34 @@
 <br />
 @if (Model.PageInfo.TotalItems > Model.PageInfo.PageSize)
 {
-    <div class="btn-group">
-        @if (Model.PageInfo.PageNumber > 1)
-        {
-            <a class="btn btn-default" href="/?page=1&size=@Model.PageInfo.PageSize"> << </a>
-            <a class="btn btn-default" href="/?page=@(Model.PageInfo.PageNumber - 1)&size=@Model.PageInfo.PageSize"> < </a>
-        }
-        @Html.PageLinks(Model.PageInfo, x => Url.Action("Index", new { page = x, size = Model.PageInfo.PageSize }))
-        @if (Model.PageInfo.PageNumber < Model.PageInfo.TotalPages)
-        {
-            <a class="btn btn-default" href="/?page=@(Model.PageInfo.PageNumber + 1)&size=@Model.PageInfo.PageSize"> > </a>
-            <a class="btn btn-default" href="/?page=@(Model.PageInfo.TotalPages)&size=@Model.PageInfo.PageSize"> >> </a>
-        }
-    </div>
-    <div class="btn-group" style="position:absolute; right:100px;">
-        <header style="margin:5px;">Выводить по</header>
-        <a class="btn btn-default" href="/?size=10"> 10 </a>
-        <a class="btn btn-default" href="/?size=25"> 25 </a>
-        <a class="btn btn-default" href="/?size=100"> 100 </a>
-    </div>
+<div class="btn-group">
+    @if (Model.PageInfo.PageNumber > 1)
+    {
+        @Html.RouteLink("<<", "Default", new { page = 1, size = Model.PageInfo.PageSize }, new { @class = "btn btn-default" })
+        @Html.RouteLink("<", "Default", new { page = Model.PageInfo.PageNumber - 1, size = Model.PageInfo.PageSize }, new { @class = "btn btn-default" })
+        @*<a class="btn btn-default" href="/?page=1&size=@Model.PageInfo.PageSize"> << </a>
+            <a class="btn btn-default" href="/?page=@(Model.PageInfo.PageNumber - 1)&size=@Model.PageInfo.PageSize"> < </a>*@
+    }
+    @Html.PageLinks(Model.PageInfo, x => Url.Action("Index", new { page = x, size = Model.PageInfo.PageSize }))
+    @if (Model.PageInfo.PageNumber < Model.PageInfo.TotalPages)
+    {
+        @Html.RouteLink(">", "Default", new { page = Model.PageInfo.PageNumber + 1, size = Model.PageInfo.PageSize }, new { @class = "btn btn-default" })
+        @Html.RouteLink(">>", "Default", new { page = Model.PageInfo.TotalPages, size = Model.PageInfo.PageSize }, new { @class = "btn btn-default" })
+        @*<a class="btn btn-default" href="/?page=@(Model.PageInfo.PageNumber + 1)&size=@Model.PageInfo.PageSize"> > </a>
+        <a class="btn btn-default" href="/?page=@(Model.PageInfo.TotalPages)&size=@Model.PageInfo.PageSize"> >> </a>*@
+    }
+</div>
+
+<div class="btn-group" style="position:absolute; right:100px;">
+    <header style="margin:5px;">Выводить по</header>
+    @Html.RouteLink("10", "Default", new { size = 10 }, new { @class = "btn btn-default" })
+    @Html.RouteLink("25", "Default", new { size = 25 }, new { @class = "btn btn-default" })
+    @Html.RouteLink("100", "Default", new { size = 100 }, new { @class = "btn btn-default" })
+
+    @*<a class="btn btn-default" href="/?size=10"> 10 </a>
+    <a class="btn btn-default" href="/?size=25"> 25 </a>
+    <a class="btn btn-default" href="/?size=100"> 100 </a>*@
+</div>
 }
 
 
