--- a/MyBase.WEB/Views/User/Deleted.cshtml
+++ b/MyBase.WEB/Views/User/Deleted.cshtml
@@ -4,8 +4,6 @@
 }
 
 <div>
-    <h1>Пользователь <b>@Model.FirstName</b> удален</h1>
-    <hr />
-    @Html.ActionLink("Все пользователи", "Index")
+    <h1>Пользователь удален</h1>
 </div>
 
