--- a/MyBase.WEB/Views/Shared/_Layout.cshtml
+++ b/MyBase.WEB/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -21,7 +22,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Добавить", "Create", "User")</li>
-                    <li>@Html.ActionLink("Заполнить 100 000", "FillStorageWithUsers", "User")</li>
+                    <li>@Html.ActionLink("Заполнить базу", "FillStorageWithUsers", "User")</li>
                 </ul>
             </div>
         </div>
