--- a/MyBase.WEB/Views/User/Details.cshtml
+++ b/MyBase.WEB/Views/User/Details.cshtml
@@ -11,12 +11,13 @@
 <div>
     @if (Model.Image != null)
     {
-        @Html.Raw("<img style='height:280px; margin: 20px' src=\"data:image/jpeg;base64,"
-            + Convert.ToBase64String(Model.Image) + "\" />")
+        <a href=@Model.Image target="_blank">
+            <img style='max-width:50%; max-height: 400px ; margin: 30px;' src=@Model.Image>
+        </a>
     }
     else
     {
-        <img style='width:200px' margin: 20px' src="/no.jpg">
+        <img style='max-width:50%; max-height: 400px ; margin: 30px;' src="/Images/Default/default.jpg">
     }
     <hr />
     <dl class="dl-horizontal">
@@ -47,7 +48,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Изменить", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Удалить", "Delete", new { id = Model.Id }) |
-    @Html.ActionLink("Все пользователи", "Index")
+    @Html.ActionLink("Изменить", "Edit", new { id = Model.Id }, new { @class = "btn btn-default" }) 
+    @Html.ActionLink("Удалить", "Delete", new { id = Model.Id }, new { @class = "btn btn-default" }) 
 </p>
