--- a/MyBase.WEB/Content/bootstrap.css
+++ b/MyBase.WEB/Content/bootstrap.css
@@ -116,6 +116,7 @@ textarea {
   margin: 0;
   font: inherit;
   color: inherit;
+    border-radius: 5px;
 }
 button {
   overflow: visible;
@@ -185,7 +186,7 @@ table {
 }
 td,
 th {
-  padding: 0;
+  padding-right: 7px;
 }
 /*! Source: https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css */
 @media print {
@@ -1488,6 +1489,7 @@ blockquote ol:last-child {
 blockquote footer,
 blockquote small,
 blockquote .small {
+
   display: block;
   font-size: 80%;
   line-height: 1.42857143;
