--- a/MyBase.WEB/Views/User/Delete.cshtml
+++ b/MyBase.WEB/Views/User/Delete.cshtml
@@ -4,11 +4,13 @@
 }
 @if (Model.Image != null)
 {
-    <img style='max-width:200px; max-height: 200px' src=@Model.Image>
+    <a href=@Model.Image target="_blank">
+        <img style='max-width:50%; max-height: 400px ; margin: 30px;' src=@Model.Image>
+    </a>
 }
 else
 {
-    <img style='width:200px' margin: 20px' src="/no.jpg">
+    <img style='max-width:50%; max-height: 400px ; margin: 30px;' src="/Images/Default/default.jpg">
 }
 <hr />
 <dl class="dl-horizontal">
@@ -18,7 +20,7 @@ else
     <dd>
         @Html.DisplayFor(model => model.FirstName)
     </dd>
-    <dt>
+    <dt> 
         @Html.DisplayNameFor(model => model.LastName)
     </dt>
     <dd>
