--- a/MyBase.WEB/Views/User/Deleted.cshtml
+++ b/MyBase.WEB/Views/User/Deleted.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Deleted";
 }
 
-<div>
-    <h1>Пользователь удален</h1>
+<div class="done">
+    <p>Пользователь удален</p>
 </div>
 
