--- a/MyBase.WEB/Views/User/Delete.cshtml
+++ b/MyBase.WEB/Views/User/Delete.cshtml
@@ -5,12 +5,12 @@
 @if (Model.Image != null)
 {
     <a href=@Model.Image target="_blank">
-        <img style='max-width:50%; max-height: 400px ; margin: 30px;' src=@Model.Image>
+        <img class="image-details" src=@Model.Image>
     </a>
 }
 else
 {
-    <img style='max-width:50%; max-height: 400px ; margin: 30px;' src="/Images/Default/default.jpg">
+    <img class="image-details" src="/Images/Default/default.jpg">
 }
 <hr />
 <dl class="dl-horizontal">
@@ -44,7 +44,6 @@ else
 {
     <h4>Вы уверены?</h4>
     <div class="form-actions no-color">
-        <input type="hidden" value="@Model.FirstName" name="FirstName" />
         <input type="submit" value="Да" class="btn btn-default" />
     </div>
 }
