--- a/MyBase.WEB/Views/User/Edit.cshtml
+++ b/MyBase.WEB/Views/User/Edit.cshtml
@@ -7,12 +7,12 @@
 @if (Model.Image != null)
 {
     <a href=@Model.Image target="_blank">
-        <img style='max-width:50%; max-height: 400px ; margin: 30px;' src=@Model.Image>
+        <img class="image-details" src=@Model.Image>
     </a>
 }
 else
 {
-    <img style='max-width:50%; max-height: 400px ; margin: 30px;' src="/Images/Default/default.jpg">
+    <img class="image-details" src="/Images/Default/default.jpg">
 }
 
 <hr />
