--- a/MyBase.WEB/Content/bootstrap.css
+++ b/MyBase.WEB/Content/bootstrap.css
@@ -181,8 +181,9 @@ optgroup {
   font-weight: bold;
 }
 table {
-  border-spacing: 0;
-  border-collapse: collapse;
+    border-spacing: 0;
+    border-collapse: collapse;
+    margin-top: 30px;
 }
 td,
 th {
