--- a/MyBase.WEB/Views/User/Delete.cshtml
+++ b/MyBase.WEB/Views/User/Delete.cshtml
@@ -2,10 +2,10 @@
 @{
     ViewBag.Title = "Delete";
 }
-@if (Model.Image != null)
+@if (Model.ImageUrl != null)
 {
-    <a href=@Model.Image target="_blank">
-        <img class="image-details" src=@Model.Image>
+    <a href=@Model.ImageUrl target="_blank">
+        <img class="image-details" src=@Model.ImageUrl>
     </a>
 }
 else
