--- a/MyBase.WEB/Views/User/Details.cshtml
+++ b/MyBase.WEB/Views/User/Details.cshtml
@@ -9,10 +9,10 @@
     </div>
 }
 <div>
-    @if (Model.Image != null)
+    @if (Model.ImageUrl != null)
     {
-        <a href=@Model.Image target="_blank">
-            <img class="image-details" src=@Model.Image>
+        <a href=@Model.ImageUrl target="_blank">
+            <img class="image-details" src=@Model.ImageUrl>
         </a>
     }
     else
