--- a/MyBase.WEB/Views/User/Index.cshtml
+++ b/MyBase.WEB/Views/User/Index.cshtml
@@ -17,10 +17,10 @@
     {
         <tr>
             <td class="contains-image">
-                @if (item.Image != null)
+                @if (item.ImageUrl != null)
                 {
                     <a href=/User/Details/@item.Id>
-                        <div class="contains-image" style='background-image: url(@item.Image);'>
+                        <div class="contains-image" style='background-image: url(@item.ImageUrl);'>
                         </div>
                     </a>
                 }
